# FastVideo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  mkdocs.yml  pyproject.toml  pyproject_other.toml
apps/dreamverse/: AGENTS.md  README.md  arch.md  design.md  gpu-pool.drawio  pyproject.toml
apps/dreamverse/docker/: .dockerignore  Dockerfile  README.md  docker_build.sh  docker_entrypoint.sh  docker_run.sh  docker_smoke.sh
apps/dreamverse/dreamverse/: _deps.py  av_streaming.py  config.py  gpu_pool.py  main.py  mock_server.py  prompt_enhancer.py  prompt_safety.py  rewrite_prompt_payload.py  runtime.py  server_entry.py  session_init_image.py  session_logger.py  utils.py  video_generation.py  worker_ipc.py
apps/dreamverse/dreamverse/benchmarks/: benchmark_av_streaming.py  benchmark_pipeline.py
apps/dreamverse/dreamverse/prompts/: README.md  auto_extension_system_prompt.md  next_segment_system_prompt.md  rewrite_user_system_prompt.md  rewrite_window_system_prompt.md
apps/dreamverse/dreamverse/routes/: __init__.py  health.py  presets.py
apps/dreamverse/dreamverse/session/: __init__.py  controller.py  messages.py
apps/dreamverse/dreamverse/tests/: conftest.py  test_config.py  test_entrypoints.py  test_gpu_pool.py  test_import_contract.py  (+5 more)
apps/dreamverse/scripts/: install_native_ffmpeg.sh  smoke_local.sh
apps/dreamverse/serve_configs/: streaming_demo.yaml
apps/dreamverse/web/: .gitignore  components.json  index.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+743 files in other folders)
